@@ -1,4 +1,4 @@
-#!/usr/bin/env python 
+0;115;0c#!/usr/bin/env python 
 
 
 """
@@ -130,7 +130,7 @@ def main():
 
     nexp, nmissing, nset = 0,0,0
     for expname, instr in gen:
-        logging.debug("Exp %s %s link %s", expname, instr, args.dolink)
+        logging.debug("Exp %s %s link %s dirs %s", expname, instr, args.dolink, ",".join(dirs_to_check))
 
         nexp += 1
         if len(expname) != 8:
