@@ -82,6 +82,9 @@ class MyTest( unittest.TestCase ) :
         self.assertEqual(mvr.network_name("daq-cxi-dss12"), "10.1.1.1")
         self.assertEqual(mvr.network_name("psanaxppffb03"), "psanaxppffb03")
         self.assertEqual(mvr.network_name("psana103"), "psana103")
+        self.assertEqual(mvr.network_name("ioc-und-rec01"), "psana-und-rec01")
+        self.assertEqual(mvr.network_name("ioct-und-rec01"), "ioct-und-rec01")
+        self.assertEqual(mvr.network_name("ioc-fee-rec02"), "psana-fee-rec02")
  
 
 
